fix spacing issues

--- a/app/assets/stylesheets/new/announcements.css.scss
+++ b/app/assets/stylesheets/new/announcements.css.scss
@@ -3,7 +3,7 @@
 	padding: 20px;
 	height: calc(100% - 340px);
 	overflow: scroll;
-	border-top: 1px solid #c0c0c0;
+	border-top: 1px solid #e7e7e7;
 }
 
 .announcement-date {
