--- a/app/assets/stylesheets/new/topics_index.css.scss
+++ b/app/assets/stylesheets/new/topics_index.css.scss
@@ -152,7 +152,7 @@
 	@include flexbox;
 	@include flex-direction(column);
 	@include justify-content(space-between);
-	height: 300px;
+	height: 310px;
 
 }
 
@@ -289,6 +289,11 @@
 	position: absolute;
 	bottom: 20px;
 	left: 20px;
+	letter-spacing: 1px;
+}
+
+.course-description {
+	margin-bottom: 20px;
 }
 
 
